--- a/medicare_frontend/package.json
+++ b/medicare_frontend/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.22.3",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-redux": "^8.0.2",
